[gd_scene load_steps=9 format=3 uid="uid://dxbuw7wng4ipj"]

[ext_resource type="Script" uid="uid://b2a60wo6ivmmb" path="res://main_menu.gd" id="1_dnfjo"]
[ext_resource type="Texture2D" uid="uid://u1bskqo2364v" path="res://Assets/Background/a picture of rush hour traffic in a busy city filled with skyscrapers.jpg" id="1_gtid3"]
[ext_resource type="Texture2D" uid="uid://b5uo0xq67ha7i" path="res://Assets/Button_PNG/Start_Button_icon.png" id="2_dnfjo"]
[ext_resource type="Texture2D" uid="uid://cyye1fx88a6eq" path="res://Assets/Button_PNG/Quit_Button_icon.png" id="3_257up"]

[sub_resource type="LabelSettings" id="LabelSettings_dnfjo"]
font_size = 20
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_257up"]
font_size = 20
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_3mro0"]

[sub_resource type="LabelSettings" id="LabelSettings_tu7k8"]
font = SubResource("SystemFont_3mro0")
font_size = 60
font_color = Color(0.928601, 0.834738, 0.16327, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_dnfjo")

[node name="backGround" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gtid3")
stretch_mode = 3

[node name="backGroundTint" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.333333)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
texture_normal = ExtResource("2_dnfjo")
ignore_texture_size = true
stretch_mode = 0

[node name="StartButtonLabel" type="Label" parent="VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"
label_settings = SubResource("LabelSettings_dnfjo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_257up")
ignore_texture_size = true
stretch_mode = 0

[node name="QuitButtonLabel" type="Label" parent="VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = SubResource("LabelSettings_257up")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTitle" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.128
anchor_right = 0.497
anchor_bottom = 0.128
offset_left = -152.247
offset_top = 0.0559998
offset_right = 152.753
offset_bottom = 83.056
grow_horizontal = 2
text = "Rush Hour"
label_settings = SubResource("LabelSettings_tu7k8")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
